
Changes in Version 0.9-45 (in development)

  o "grob inspector" etc now pads bounding boxes, so it is possible to
    click on straight lines.

Changes in Version 0.9-44

  o Added a "Stop" action to interrupt plotting.

  o Added 'preplot.actions' argument to playwith().

  o A custom 'handler' function can be specified for 'parameters' widgets.

  o Improved demo("clusterApp").

  o Brushing a single data point (line) in a parallel plot now works.

  o "Select from table" to identify points now works in more cases.

  o New function identifyGrob(), returns names of clicked grid-objects.

Changes in Version 0.9-43

  o Fixed bug that caused annotations outside the plot area to fail.

Changes in Version 0.9-42

  o Fixed "protection stack overflow" triggered by resizing grid plots.

  o "Full scale" tools now work with Lattice's "free" scales.

  o Page annotations are now inside Lattice's toplevel viewport.

  o Added a Theme menu for Lattice themes (moved out from Style menu).

Changes in Version 0.9-40

  o Split Latticist out into a new package 'latticist'.

  o Handles plots from the 'vcd' package without falling over.

  o Detects pages of a Lattice plot when 'layout' arg is missing.

Changes in Version 0.9-32

  o Select IDs from Table works correctly when columns are sorted.

  o Latticist reorders factor levels again (when reorder = TRUE),
    and variable expressions involving "dat" have been fixed.

Changes in Version 0.9-31

  o Latticist API abstracted into functions latticistParse() and
    latticistCompose(); the function latticist() is purely a GUI.

  o Support for more plots via plotCoords and case.names methods.

  o New tools "Pan" (scroll), "Line", "Rect".

  o "Undo" is now available in more cases, and is part of the API.

  o Changed some click actions and keyboard shortcuts.

  o "Point / line style" dialog box.

  o Labels menu: "Select from table" now implemented.

  o Fixed initial window size.
